--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,14 +1,40 @@
 <div class="footer">
   <div class="footer-content">
     <div class="row">
+  <!-- Añadido por mi -->
 
-      <div class="col-f-1a3">
+      <div class="logo-footer">
+          <img src="#" alt="logo-footer">
+      </div>
+      <div class="sobre-nosotros-footer">
+          <h3>sobre nosotros</h3>
+          <ul>
+              <li><a href="mas-madrid.php">Más Madrid</a></li>
+              <li><a href="carta.php">Carta</a></li>
+              <li><a href="novedades.php">Novedades</a></li>
+          </ul>
+      </div>
+      <div class="redes-footer">
+          <h3>síguenos</h3>
+          <ul>
+              <li><a href="#">logo facebook</a></li>
+              <li><a href="#">logo twitter</a></li>
+              <li><a href="#">logo isntagram</a></li>
+          </ul>
+      </div>
+
+
+  <!-- Fin de añadido por mi -->
+
+
+
+<!--  <div class="col-f-1a3">
         <div class="footer-contact">
-          <h2 class="footer-logo">Podemos</h2>
+          <h2 class="footer-logo">MÁS MADRID</h2>
           <p>C/ Zurita, 21</p>
           <p>28012 Madrid</p>
           <!--<p><%= link_to "¿Problemas con la inscripción?", faq_path %></p>-->
-          <p><a href="/soporte-votaciones/">¿Problemas con la inscripción?</a></p>
+          <!--<p><a href="/soporte-votaciones/">¿Problemas con la inscripción?</a></p>-->
 
           <!-- nav class="languages">
             <ul>
@@ -27,12 +53,12 @@
             </ul>
           </nav -->
         </div><%#!--.footer-contact--%>
-      </div><%#!--.col-f-1a3--%>
+      </div><%#!--.col-f-1a3--%> -->
 
 
-       <div class="col-f-4a5">
+<!-- <div class="col-f-4a5">
         <div class="footer-conoce">
-          <h2>Conoce</h2>
+          <h2>Colabora</h2>cambiar enlaces
           <ul>
             <li>
               <a href="http://podemos.info/organizacion/">Organización</a>
@@ -100,11 +126,11 @@
             </li>
           </ul>
         </div><%#!--.footer-participa--%>
-      </div><%#!--.col-f-10a12--%>
+      </div><%#!--.col-f-10a12--%> -->
 
     </div><!--.row-->
 
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-f-1a12">
         <ul class="disclaimer-links">
           <li> <%= link_to "#{Date.today.year} podemos.info", '#' %> </li>
@@ -113,7 +139,7 @@
           <li> <a href="https://podemos.info/documentos/" target="_blank">|  Estatutos del partido político Podemos</a> </li>
         </ul>
       </div><%#!--.col-f-1a12--%>
-    </div><%#!--.row--%>
+    </div><%#!--.row--%> -->
 
   </div><%#!--.footer-content--%>
 </div><%#!--#pie--%>
