--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -6,10 +6,11 @@
       <figure class="logo">
         <a href="/">
           <h1>
-            <%= image_tag "logo.podemos-220-w.png", alt: "PODEMOS" %>
+            <%= image_tag "logo.podemos-220-w.png", alt: "MAS MADRID" %> CAMBIAR IMAGEN
           </h1>
         </a>
       </figure>
+      <p>probando color</p>
     </div><!--col-h-1-->
 
     <% if user_signed_in? %>
