--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -4,7 +4,7 @@
   <!-- Añadido por mi -->
 
       <div class="logo-footer">
-          <img src="#" alt="logo-footer">
+          <%= image_tag "masmadrid-cubos.svg", alt: "mas madrid" %>
       </div>
       <div class="sobre-nosotros-footer">
           <h3>sobre nosotros</h3>
