--- a/app/views/users_mailer/remember_email.html.erb
+++ b/app/views/users_mailer/remember_email.html.erb
@@ -3,12 +3,12 @@ Hola <%= @user.email %>!
 </p>
 
 <p>
-Tú (o alguien haciendose pasar por tí) ha intentado crear un usuario con tus datos (correo electrónico o documento único) en el <%= link_to "entorno PODEMOS de participación", root_url %> ).
+Tú (o alguien haciendose pasar por tí) ha intentado crear un usuario con tus datos (correo electrónico o documento único) en el <%= link_to "entorno Más Madrid de participación", root_url %> ).
 </p>
 
 <p>
 En caso de que no hayas sido tú puedes ignorar este mensaje, si lo recibes varias veces contacta con nosotros en
-<a href="https://participa.podemos.info/soporte-votaciones/">soporte votaciones</a>.
+<a href="https://participa.masmadrid.org/soporte-votaciones/">soporte votaciones</a>.
 </p>
 
 <p>
