--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -9,137 +9,35 @@
       <div class="sobre-nosotros-footer">
           <h3>sobre nosotros</h3>
           <ul>
-              <li><a href="mas-madrid.php">Más Madrid</a></li>
-              <li><a href="carta.php">Carta</a></li>
-              <li><a href="novedades.php">Novedades</a></li>
+              <li><a href="https://www.masmadrid.org/">Más Madrid</a></li>
+              <li><a href="https://www.masmadrid.org/carta_de_manuela_carmena_e_igo_errej_n">Carta</a></li>
+              <li><a href="https://www.masmadrid.org/novedades">Novedades</a></li>
           </ul>
       </div>
       <div class="redes-footer">
           <h3>síguenos</h3>
           <ul>
-              <li><a href="#">logo facebook</a></li>
-              <li><a href="#">logo twitter</a></li>
-              <li><a href="#">logo isntagram</a></li>
+              <li>
+                <a href="https://www.facebook.com/MasMadrid2019/">
+                  <%= image_tag "facebook.svg", alt: "facebook mas madrid" %>
+                </a>
+              </li>
+              <li>
+                <a href="https://twitter.com/@MasMadrid__">
+                  <%= image_tag "twitter.svg", alt: "twitter mas madrid" %>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/MasMadrid2019/">
+                  <%= image_tag "instagram.svg", alt: "instagram mas madrid" %>
+                </a>
+              </li>
           </ul>
       </div>
-
-
   <!-- Fin de añadido por mi -->
 
-
-
-<!--  <div class="col-f-1a3">
-        <div class="footer-contact">
-          <h2 class="footer-logo">MÁS MADRID</h2>
-          <p>C/ Zurita, 21</p>
-          <p>28012 Madrid</p>
-          <!--<p><%= link_to "¿Problemas con la inscripción?", faq_path %></p>-->
-          <!--<p><a href="/soporte-votaciones/">¿Problemas con la inscripción?</a></p>-->
-
-          <!-- nav class="languages">
-            <ul>
-              <li class="lang-castellano">
-                <%= link_to "Castellano", url_for(locale: :es), class: current_lang_class(:es) %>
-              </li>
-              <li class="lang-catala">
-                <%= link_to "Català", url_for(locale: :ca), class: current_lang_class(:ca) %>
-              </li>
-              <li class="lang-euskara">
-                <%= link_to "Euskera", url_for(locale: :eu), class: current_lang_class(:eu) %>
-              </li>
-              <li class="lang-galician">
-                <%= link_to "Galego", url_for(locale: :gl), class: current_lang_class(:gl) %>
-              </li>
-            </ul>
-          </nav -->
         </div><%#!--.footer-contact--%>
-      </div><%#!--.col-f-1a3--%> -->
-
-
-<!-- <div class="col-f-4a5">
-        <div class="footer-conoce">
-          <h2>Colabora</h2>cambiar enlaces
-          <ul>
-            <li>
-              <a href="http://podemos.info/organizacion/">Organización</a>
-            </li>
-            <li>
-              <a href="http://podemos.info/programa/">Programa</a>
-            </li>
-            <li>
-              <a href="https://transparencia.podemos.info/">Transparencia</a>
-            </li>
-          </ul>
-        </div><%#!--.footer-conoce--%>
-      </div><%#!--.col-f-4a5--%>
-
-
-      <div class="col-f-6a7">
-        <div class="footer-informate">
-          <h2>Colabora</h2>
-          <ul>
-            <li>
-              <a href="https://participa.podemos.info/es/colabora/">Colabora periódicamente</a>
-            </li>
-            <li>
-              <a href="http://crowdfunding.podemos.info/">Crowdfunding</a>
-            </li>
-            <li>
-              <a href="http://tienda.podemos.info/">Tienda</a>
-            </li>
-          </ul>
-        </div><%#!--.footer-participa--%>
-      </div><%#!--.col-f-6a7--%>
-
-      <div class="col-f-8a9">
-        <div class="footer-participacion">
-          <h2>Participa</h2>
-          <ul>
-            <li>
-              <a href="http://podemos.info/impulsa/">Proyectos IMPULSA</a>
-            </li>
-            <li>
-              <a href="https://plaza.podemos.info/">Plaza 2.0</a>
-            </li>
-          </ul>
-        </div><%#!--.footer-conoce--%>
-      </div><%#!--.col-f-8a9--%>
-
-      <div class="col-f-10a12">
-        <div class="footer-siguenos">
-          <h2>Síguenos</h2>
-          <ul>
-            <li>
-              <%= link_to "https://www.youtube.com/user/CirculosPodemos/" do %>
-                <%= image_tag "ico.social45-youtube-on.png", alt: "YouTube" %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to "https://www.facebook.com/pages/Podemos/269212336568846" do %>
-                <%= image_tag "ico.social45-facebook-on.png", alt: "Facebook" %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to "https://twitter.com/ahorapodemos" do %>
-                <%= image_tag "ico.social45-twitter-on.png", alt: "Twitter" %>
-              <% end %>
-            </li>
-          </ul>
-        </div><%#!--.footer-participa--%>
-      </div><%#!--.col-f-10a12--%> -->
-
+      </div><%#!--.col-f-1a3--%>
     </div><!--.row-->
-
-    <!-- <div class="row">
-      <div class="col-f-1a12">
-        <ul class="disclaimer-links">
-          <li> <%= link_to "#{Date.today.year} podemos.info", '#' %> </li>
-          <li> <a href="https://files.podemos.info/tbsEDpJwi7.pdf" target="_blank">Condiciones de uso, empleo de cookies y política de privacidad</a></li>
-          <li> <%= link_to "|  Comisión de Garantías Democráticas", guarantees_path %> </li>
-          <li> <a href="https://podemos.info/documentos/" target="_blank">|  Estatutos del partido político Podemos</a> </li>
-        </ul>
-      </div><%#!--.col-f-1a12--%>
-    </div><%#!--.row--%> -->
-
   </div><%#!--.footer-content--%>
 </div><%#!--#pie--%>
