--- a/app/assets/stylesheets/variables-mm.css.scss
+++ b/app/assets/stylesheets/variables-mm.css.scss
@@ -3,6 +3,7 @@ Variables Sass para participa MM
 ------------------------------------*/
 $verde-oscuro:#004732;
 $verde-claro:#54efa5;
+$verde-medio: #3cae6c;
 $ocre-login: #efaf62;
 $marron-unete: #a93e37 ;
-$background-error: #ff050014;
+$background-error: #ffd5d4;
