--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -189,7 +189,7 @@ general
 
 .footer-content .row {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .footer-content h3 {
@@ -324,7 +324,7 @@ home
 
 .login-form-contenedor {
   width: 100%;
-  padding: 10px; 
+  padding: 20px; 
 }
 
 .login-texto {
@@ -353,7 +353,8 @@ home
   height: 60px;
   background-size: auto;
   cursor: pointer;
-  transform: translateX(50%);
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .boton1 {
@@ -376,8 +377,9 @@ home
   background-color: $ocre-login;
   width: 480px;
   max-width: 480px;
-  padding: 30px;
-  margin: 80px 0;
+  padding: 15px 15px 0 15px;
+  margin: 35px 0 0 0;
+
 }
 
 .login-form h4 {
@@ -397,27 +399,27 @@ home
 
 .login-form form label {
   display: inline-block;
-  font-size: 20px;
-  padding: 10px;
+  font-size: 16px;
+  padding: 5px;
   color: #004732;
 }
 
 .login-form form input {
   border: none;
   width: 100%;
-  font-size: 20px;
-  line-height: 20px;
-  padding: 10px;
-  margin: 10px 0;
+  font-size: 16px;
+  line-height: 16px;
+  padding: 8px;
+  margin: 5px 0;
 }
 
 .login-form form input.boton1 {
   text-transform: uppercase;
   border: none;
-  width: 200px!important;
-  font-size: 20px!important;
+  width: 175px !important;
+  font-size: 16px !important;
   line-height: 20px;
-  padding: 18px!important;
+  padding: 15px !important;
   margin: 10px auto;
 }
 
@@ -461,7 +463,7 @@ home
   font-size: 14px;
   text-decoration: none;
   display: block;
-  margin: 10px auto 0 auto;
+  margin: 0px auto 0 auto;
   padding: 5px;
   text-align: center;
 }
@@ -472,7 +474,31 @@ home
 
 /* MAIN LOGIN MIO */
 
+/*  FOOTER MIO */
+.logo-footer img {
+  width: 110px;
+  margin-left: 5px;
+}
 
+.sobre-nosotros-footer {
+  display: none;
+}
+
+.redes-footer {
+  display: none;
+}
+
+.redes-footer ul {
+  display: none;
+  justify-content: flex-start;
+} 
+.redes-footer li {
+  display: inline-block;
+  width: 50px;
+  margin-right: 20px;
+}
+
+/*  FOOTER MIO */
 /* -----------------------------------
 footer
 ----------------------------------- */
@@ -481,7 +507,7 @@ footer
   padding:2em 0;
 }
 .footer a{
-  color:#c3a6cf;
+  color:#fff;
 }
 .footer strong{
   text-transform:uppercase;
@@ -490,7 +516,7 @@ footer
 .footer-content h2{
   text-transform:uppercase;
   font-family:Montserrat,Arial,sans-serif;
-  color:#c3a6cf;
+  color:#fff;
   font-weight:bold;
   margin-top:1.1em;
   margin-bottom:0.5em;
@@ -652,22 +678,24 @@ submenu
   margin:0 0.5em 0.5em 0;
 }
 .submenu li a{
-  display:inline-block;
+  text-transform: capitalize;
+  display: inline-block;
   padding:0.5em 0.75em;
-  background:#d7cad8;
-  color:$verde-oscuro;
+  background: $verde-medio;
+  color: #fff;
 }
 .submenu li a:hover{
-  background:#8e618c;
-  color:#d7cad8;
+  background:$verde-medio;
+  opacity: 0.8;
+  color: #000;
 }
 .submenu li.active{
   text-transform:Montserrat,Arial,sans-serif;
-  background:#d7cad8;
+  background:$ocre-login;
   float:left;
 }
 .submenu li.active a{
-  background:$verde-oscuro;
+  background:$ocre-login;
   color:#fff;
 }
 
@@ -1579,7 +1607,8 @@ a.button,
 input.button{
   display: inline-block;
   padding:1em 3em;
-  background:#97c2b8;
+  background:$verde-medio;
+  opacity: 0.8;
   color:#fff;
   border:0;
   border-radius:3px;
@@ -1592,7 +1621,8 @@ input.button{
 .button:hover,
 a.button:hover,
 input.button:hover{
-  background:#269283;
+  background:$verde-medio;
+  opacity: 1;
 }
 
 .button-danger,
@@ -2318,6 +2348,17 @@ layout 4+: 978-...+ # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 
   //   width:75%;
   // }
 
+/*  HEADER MIO */
+
+  .logo{
+    float:left;
+    width: 65%;
+    max-width:22em;
+    height:auto;
+    padding:1.3em 0;
+  }
+
+  /*  HEADER MIO */
   /* MAIN LOGIN MIO */
 * {
   box-sizing: border-box;
@@ -2404,11 +2445,12 @@ layout 4+: 978-...+ # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 
   position: absolute;
   background: url(boton-unete.svg);
   background-repeat: no-repeat;
-  width: 200px;
+  width: 170px;
   height: 60px;
   background-size: auto;
   cursor: pointer;
-  transform: translateX(0%);
+  left: 0;
+  transform: translateX(40%);
 }
 
 .login-form {
@@ -2515,6 +2557,23 @@ layout 4+: 978-...+ # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 
 
 /*  FOOTER MIO */
 
+  .logo-footer {
+
+  }
+
+  .logo-footer img {
+    width: 180px;
+    margin-left: 5px;
+  }
+
+  .sobre-nosotros-footer {
+    display: inline;
+  }
+
+  .redes-footer {
+    display: inline;
+  }
+
   .redes-footer ul {
     display: flex;
     justify-content: flex-start;
@@ -2522,7 +2581,7 @@ layout 4+: 978-...+ # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 
   .redes-footer li {
     display: inline-block;
     width: 50px;
-    margin-right: 10px;
+    margin-right: 20px;
   }
 
 /*  FOOTER MIO */
