--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -7,11 +7,25 @@
           <%= image_tag "masmadrid-cubos.svg", alt: "mas madrid" %>
       </div>
       <div class="sobre-nosotros-footer">
-          <h3>sobre nosotros</h3>
+          <h3>Colabora</h3>
+          <ul>
+              <li><a href="#">Crowdfunding</a></li>
+              <li><a href="#">Hazte voluntario</a></li>
+          </ul>
+      </div>
+      <div class="sobre-nosotros-footer">
+          <h3>Conócenos</h3>
           <ul>
               <li><a href="https://www.masmadrid.org/">Más Madrid</a></li>
               <li><a href="https://www.masmadrid.org/carta_de_manuela_carmena_e_igo_errej_n">Carta</a></li>
               <li><a href="https://www.masmadrid.org/novedades">Novedades</a></li>
+          </ul>
+      </div>
+      <div class="sobre-nosotros-footer">
+          <h3>Ayuda</h3>
+          <ul>
+              <li><a href="/soporte-votaciones">¿Problemas con la inscripción?</a></li>
+              <li><a href="/soporte-votaciones">¿Problemas con la votación?</a></li>
           </ul>
       </div>
       <div class="redes-footer">
